Fix dark mode colour input

--- a/studio/styles/join-organization-auth-code.scss
+++ b/studio/styles/join-organization-auth-code.scss
@@ -7,6 +7,7 @@
 	> input {
 		@apply text-center;
 		@apply text-xl;
+		@apply text-scale-800;
 
 		&:nth-child(5n+1) {
 			@apply ml-6
